fix(#3): fix gap for slider & description projects section

--- a/src/components/sections/projects/projects.module.css
+++ b/src/components/sections/projects/projects.module.css
@@ -221,5 +221,6 @@
   }
   .projects_description {
     padding-inline: 16px;
+    margin-block-end: 40px;
   }
 }
